--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
 	<script src="https://kit.fontawesome.com/92ec397263.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="style.css">
 	<title>Mon Profil</title>
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-</head>
+	<link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+	<link rel="manifest" href="favicon_io/site.webmanifest">
 <body>
 <div>
 		<!-- ceci est un commentaire -->
@@ -50,7 +49,7 @@
 	<h2 class="Follow">Follow me</h2>
 	<ul class="list-inline">
 		<li>
-			<a href="https://m.facebook.com/profile.php" class="button_FB" target="_blank">
+			<a href="https://m.facebook.com/profile.php?lst=100011320152284%3A100011320152284%3A1633595336&viewas=100000686899395" class="button_FB" target="_blank">
 				<i class="fab fa-facebook-square"> Facebook </i>
 			</a>
 		</li>
