--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<h2 class="Follow">Follow me</h2>
 	<ul class="list-inline">
 		<li>
-			<a href="https://m.facebook.com/profile.php?lst=100011320152284%3A100011320152284%3A1633595336&viewas=100000686899395" class="button_FB" target="_blank">
+			<a href="https://www.facebook.com/profile.php?id=100011320152284" class="button_FB" target="_blank">
 				<i class="fab fa-facebook-square"> Facebook </i>
 			</a>
 		</li>
