--- a/index.html
+++ b/index.html
@@ -10,13 +10,37 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
 	<link rel="manifest" href="favicon_io/site.webmanifest">
+</head>
+<header>
+	<div id='menu'>
+	<nav>
+		<ul>
+			<li><a>Mes expériences professionnels</a>
+				<ul>
+					<li><a><a href="prolub.html" class="Prolub">Prolub </a></li>
+					<li><a><a href="leclerc.html" class="Leclerc">Leclerc Réunion </a></a></li>
+				</ul>
+			</li>
+			<li><a>Mes voyages</a>
+				<ul>
+					<li><a>Australie</a></li>
+					<li><a>Chine</a></li>
+					<li><a>Singapour</a></li>
+				</ul>
+			</li>
+			<li><a>Mon sport</a></li>
+			<li><a>Mon île</a></li>
+		</ul>
+	</nav>
+	</div>
+</header>
 <body>
 <div>
 		<!-- ceci est un commentaire -->
 	<h1>Hello, I'm Lucas ☀️</h1>
 		<img src="images/photo.jpg" alt="Ma photo de profile" width="150">
 	<p id="introduction-text">
-		Bonjour je suis un étudiant de Kedge. J'ai réaliser l'entierté de mon parcour scolaire a la réunion. Je suis interesser par les sports extrêmes, et mécaniques.
+		Je m'appelle Lucas Salez et j'ai 20 ans, je suis étudiant à Kedge Business School sur le campus de Bordeaux. J'ai réalisé l'entierté de mon parcour scolaire à la réunion. Je suis interessé par les sports extrêmes, et mécaniques.
 	</p>
 
 		<a href="https://www.probikeshop.fr"class="button-blue" target="_blank">Découvrez ici mon site preferé</a>
@@ -25,24 +49,21 @@
 	<!-- 2eme section  -->
 <div>
 		<h2> KEDGE Business School</h2>
-		<P> Après avoir passé les concours pour les écoles de commerce j'ai integré <strong>Kedge BS</strong> </P>
+		<P> Après avoir passé les concours pour les écoles de commerce j'ai integré <strong>Kedge BS</strong>. Pour arriver jusqu'aux concours j'ai fait ma classe préparatoire aux grandes écoles au lycée Bellepierre. Ce fût deux années très intenses, mais riches en expériences.
+		</P>
 </div>
 	
 	
 <div>
 		<h2>Mon parcours Scolaire</h2>
 		<p>
-			Après l'obtention de mon brevet au collège <STRONG>Saint Michel</STRONG>, je suis allé au lycée <strong>Leconte de Lisle</strong>. Je me suis orienté vers la filière STMG, et j'ai obtenu mon bac mention très bien en 2019. Suite à cela je me suis orienté vers une classe préparatoire aux grand écoles de commerces en filière ECT au lyvée <strong>Bellepierre</strong>.
+			Après l'obtention de mon brevet au collège <STRONG>Saint Michel</STRONG>, je suis allé au lycée <strong>Leconte de Lisle</strong>. Je me suis orienté vers la filière STMG, et j'ai obtenu mon bac mention très bien en 2019. Suite à cela je me suis orienté vers une classe préparatoire aux grand écoles de commerces en filière ECT au lycée <strong>Bellepierre</strong>.
 		</p>
 </div>
 
 <div>
 		<h2>Mes hobbies</h2>
-		<p>Je suis originaire de La Réunion, venant de cette île intense je suis quelqu'un de très dynamique. J'adore découvrir de nouveaux paysage et voyageer. Je pratique aussi le VTT descente. </p>
-</div>
-
-<div class="la-reunion">
-	
+		<p>Je suis originaire de La Réunion, venant de cette île intense je suis quelqu'un de très dynamique. J'adore découvrir de nouveaux paysages et voyager. Je pratique aussi le VTT descente depuis 2016.</p>
 </div>
 	
 <div id="Follow">
@@ -66,6 +87,5 @@
 
 	</ul>
 </div>
-
 </body>
 </html>
