--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://kit.fontawesome.com/92ec397263.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="styles/style.css">
 	<title>Mon Profil</title>
 	<link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
@@ -23,9 +23,9 @@
 			</li>
 			<li><a>Mes voyages</a>
 				<ul>
-					<li><a>Australie</a></li>
-					<li><a>Chine</a></li>
-					<li><a>Singapour</a></li>
+					<li><a><a href="australie.html" class="Australie">Australie</a></li>
+					<li><a><a href="chine.html" class="chine">Chine</a></li>
+					<li><a><a href="singapour.html" class=singapour>Singapour</a></li>
 				</ul>
 			</li>
 			<li><a>Mon sport</a></li>
