--- a/leclerc.html
+++ b/leclerc.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://kit.fontawesome.com/92ec397263.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="leclerc_style.css">
+	<link rel="stylesheet" href="styles/leclerc_style.css">
 	<title>Document</title>
 	<link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
