--- a/leclerc.html
+++ b/leclerc.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://kit.fontawesome.com/92ec397263.js" crossorigin="anonymous"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles/leclerc_style.css">
 	<title>Document</title>
 	<link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
@@ -16,7 +17,7 @@
 	<h1><strong>Leclerc Réunion</strong></h1>
 		<img src="https://yt3.ggpht.com/ytc/AKedOLQDhCKI24TGKiKR1zCh-GmKgUHC5-cO03C6fqmA=s900-c-k-c0x00ffffff-no-rj" alt="Leclerc" width="150" class="logo">
 			<p>
-				Le groupe Leclerc Réunion est installé à la Réunion depuis 2009. De nombreux centre commerciaux on vu le jours depuis cela, comme le E.Leclerc la Rerserve a Sainte-Marie.
+				Le groupe Leclerc Réunion est installé à la Réunion depuis 2009. De nombreux centre commerciaux ont vu le jours depuis cela, comme le E.Leclerc la Rerserve à Sainte-Marie.
 			</p> 
 		<img src="https://www.reunionnaisdumonde.com/IMG/png/leclerc-la-reserve.png" alt="leclerc-la-reserve">
 	</div>
