--- a/australie.html
+++ b/australie.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://kit.fontawesome.com/92ec397263.js" crossorigin="anonymous"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles/australie_style.css">
 	<title>Australie</title>
 	<link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
@@ -21,20 +22,21 @@
 	</div>
 	<div class="dev">
 		<div class="int">
-			<h2>Ma semaine à l'école</h2>
+
+			<img src="images/travail_aust.jpg" alt="#" width="400" class="img">
+
+		<h2>Ma semaine à l'école</h2>	
 			<p>
-				Lors de cette semaine j'ai appris plusieur choses. Premièrement sur le plan linguistique j'ai pu apprendre a maitriser un anglais plus courant que celui qu'on apprend à l'école. Deuxièmement j'ai pu faire plein de belle rencontre avec des australien et surtout avec ma famille d'accueil.
-
-				<img src="images/travail_aust.jpg" alt="#" width="400" class="img">
-
+				Lors de cette semaine j'ai appris plusieurs choses. Premièrement sur le plan linguistique j'ai pu apprendre à maitriser un anglais plus courant que celui qu'on apprend à l'école. Deuxièmement j'ai pu faire plein de belles rencontres avec des australiens et surtout avec ma famille d'accueil.
 			</p>
 		</div>
 		<div class="int">
-			<h2>Ma semaine au centre ville</h2>
-			<p>
-				 Durant cette semaine j'ai pu découvrir le centre ville de Sydney. Nous avons visité le ZOO de Sydney, le "fameux" grand <strong>Opéra de Sydney</strong>, mais aussi la Sydney Tower. Cette semaine été toute aussi enrichissante que la première, car j'ai connu de nouvelles personnes. Nous avons aussi fêtés Halloween, l'ambiance été très différente qu'en France. 
 
-				 <img src="https://images.pexels.com/photos/1680247/pexels-photo-1680247.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="#" width="200" class="img">
+			<img src="https://images.pexels.com/photos/1680247/pexels-photo-1680247.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="#" width="200" class="img">
+
+		<h2>Ma semaine au centre ville</h2>
+			<p>
+				Durant cette semaine j'ai pu découvrir le centre ville de Sydney. Nous avons visité le ZOO de Sydney, le "fameux" grand <strong>Opéra de Sydney</strong>, mais aussi la Sydney Tower. Cette semaine été toute aussi enrichissante que la première, car j'ai connu de nouvelles personnes. Nous avons aussi fêté Halloween, l'ambiance était très différente qu'en France. 	 
 			</p>
 		</div>
 	</div>
