--- a/chine.html
+++ b/chine.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://kit.fontawesome.com/92ec397263.js" crossorigin="anonymous"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles/chine_style.css">
 	<title>Chine</title>
 	<link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
@@ -15,20 +16,22 @@
 	<div class="first">	
 		<h1> Mon voyage linguistique à Pekin </h1>
 			<P>
-			En 2015 j'ai eu la chance de découvrir la Chine, car j'étudie le chinois depuis la classe de 6ème. Lors de ce voyage j'ai passé deux semaine à Pekin entre apprentisage de la langue et visite de la ville. Au retour nous avons fais escale à Hong-Kong, j'ai pu découvrir cette autre ville. 
+				En 2015 j'ai eu la chance de découvrir la Chine, car j'étudie le chinois depuis la classe de 6ème. Lors de ce voyage j'ai passé deux semaine à Pekin entre apprentisage de la langue et visite de la ville. Au retour nous avons fait escale à Hong-Kong, j'ai pu découvrir cette autre ville. 
 			</P>
 	</div>
 	<div class="photos">
 		<h2> Quelques photos </h2>
-		<p> Voici les photos de ce que j'ai pu voir et découvrir pendant ce voyage.</p>
+			<p> 
+				Voici les photos de ce que j'ai pu voir et découvrir pendant ce voyage.
+			</p>
 	</div>
 	<div class="slideshow">
 		<ul>
-		<li><img src="https://images.pexels.com/photos/6440085/pexels-photo-6440085.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt><span>La Cité interdite (故宫)</span></li>
-		<li><img src="https://images.pexels.com/photos/3054690/pexels-photo-3054690.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt><span>La gastronomie chinoise (中国菜)</span></li>
-		<li><img src="images/muraille.jpg" alt><span>La Grande Muraille (长城)</span></li>
-		<li><img src="https://images.pexels.com/photos/1661535/pexels-photo-1661535.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt><span>Les Pandas (熊猫)</span></li>
-		<li><img src="https://images.pexels.com/photos/2693282/pexels-photo-2693282.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt><span>Hong Kong (香港)</span></li>
+			<li><img src="https://images.pexels.com/photos/6440085/pexels-photo-6440085.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt><span>La Cité interdite (故宫)</span></li>
+			<li><img src="https://images.pexels.com/photos/3054690/pexels-photo-3054690.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt><span>La gastronomie chinoise (中国菜)</span></li>
+			<li><img src="images/muraille.jpg" alt><span>La Grande Muraille (长城)</span></li>
+			<li><img src="https://images.pexels.com/photos/1661535/pexels-photo-1661535.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt><span>Les Pandas (熊猫)</span></li>
+			<li><img src="https://images.pexels.com/photos/2693282/pexels-photo-2693282.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt><span>Hong Kong (香港)</span></li>
 	</ul>
 	<div class="barre_progression">
 	</div>
