--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://kit.fontawesome.com/92ec397263.js" crossorigin="anonymous"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css">
 	<title>Mon Profil</title>
 	<link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
@@ -17,19 +18,19 @@
 		<ul>
 			<li><a>Mes expériences professionnels</a>
 				<ul>
-					<li><a><a href="prolub.html" class="Prolub">Prolub </a></li>
-					<li><a><a href="leclerc.html" class="Leclerc">Leclerc Réunion </a></a></li>
+					<li><a><a href="prolub.html" class="pages">Prolub </a></li>
+					<li><a><a href="leclerc.html" class="pages">Leclerc Réunion </a></a></li>
 				</ul>
 			</li>
 			<li><a>Mes voyages</a>
 				<ul>
-					<li><a><a href="australie.html" class="Australie">Australie</a></li>
-					<li><a><a href="chine.html" class="chine">Chine</a></li>
-					<li><a><a href="singapour.html" class=singapour>Singapour</a></li>
+					<li><a><a href="australie.html" class="pages">Australie</a></li>
+					<li><a><a href="chine.html" class="pages">Chine</a></li>
+					<li><a><a href="singapour.html" class="pages">Singapour</a></li>
 				</ul>
 			</li>
-			<li><a>Mon sport</a></li>
-			<li><a>Mon île</a></li>
+			<li><a><a href="mon_sport.html" class="pages">Mon sport</a></li>
+			<li><a><a href="mon_île.html" class="pages">Mon île</a></li>
 		</ul>
 	</nav>
 	</div>
