--- a/prolub.html
+++ b/prolub.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://kit.fontawesome.com/92ec397263.js" crossorigin="anonymous"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles/prolub_style.css">
 	<title>Mon expérience chez Prolubrun</title>
 	<link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
@@ -15,15 +16,15 @@
 	<div>
 		<h1><strong>Prolub'run</strong></h1>
 		<p>
-			Prolub'run est un revendeur de graisse et d'huille moteur pour les véhicules. Le dépôt de l'entreprise est situé à l'est de la Réunion à Saint-André plus particulièrment. 
+			Prolub'run est un revendeur de graisses et d'huilles moteur pour les véhicules. Le dépôt de l'entreprise est situé à l'est de la Réunion à Saint-André plus particulièrment. 
 		</p>
 		<img src="https://prolubsrun.q8oils.fr/Portals/52/Skins/Q8Oils/images/logo_reseller.gif" alt="Prolub" width="150">
 	</div>
 	<div>
 		<h2>Mes missions au sein de l'entreprise</h2>
 		<p>
-			J'ai travillé a Prolub'run pendant 3 semaines. 
-			J'avais le poste de préparateur de commande polyvalent. Ma mission principale etait de préparer les commande pour les livreurs. 
+			J'ai travillé à Prolub'run pendant 3 semaines. 
+			J'avais le poste de préparateur de commande polyvalent. Ma mission principale était de préparer les commandes pour les livreurs. 
 			Je m'occupais aussi de la reception des produits et du conditionnement de certains produits. 
 		</p>
 	</div>
