--- a/singapour.html
+++ b/singapour.html
@@ -4,15 +4,41 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://kit.fontawesome.com/92ec397263.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="styles.singapour_style.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<link rel="stylesheet" href="styles/singapour_style.css">
 	<title>Singapour</title>
 	<link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
 	<link rel="manifest" href="favicon_io/site.webmanifest">
-
 </head>
 <body>
-	
+	<div class="banner">
+	<h1> Voici singapour By night </h1>
+	</div>
+	<div class="voyage">
+		<h2>Mon voyage</h2>
+		<p>
+			J'ai eu la chance de viviter Singpour avec mes parents en 2018. Lors de se voyage nous avons visité plusieur endroits emblématiques. J'ai été impressionné par la taille des centres commerciaux, 8 étage en hauteur et 8 étages en sous terrain, ca fait beaucoup la non ? Nous avons passé 10 jours, 10 jours intenses dans une ville sudimensionnée et très dynamique.
+		</p>
+	</div>
+	<div class="lieux">
+		<div class="photos">
+			<h2>Le Merlion</h2>
+			<img src="images/merlion.jpg" alt="Le merlion"  height="400px">
+		</div>
+		<div class="photos">
+			<h2>Le quartier Chinois</h2>
+			<img src="images/temple.jpg" alt="Un temple chinois" height="400px">
+		</div>
+		<div class="photos">
+			<h2>Universal Studio</h2>
+			<img src="images/univ_studio.jpg" alt="" height="500px">
+		</div>
+		<div class="photos">
+			<h2>Jurong Bird Park</h2>
+			<img src="images/bird_park.jpg" alt="Le parc aux oiseaux" height="340px">
+		</div>
+	</div>		
 </body>
 </html>
